--- a/infrastructure/resources/dynamodb-stack.yaml
+++ b/infrastructure/resources/dynamodb-stack.yaml
@@ -24,7 +24,7 @@ Resources:
       BillingMode: PAY_PER_REQUEST
       PointInTimeRecoverySpecification:
         PointInTimeRecoveryEnabled: true
-      # DeletionProtectionEnabled: true
+      DeletionProtectionEnabled: true
 
   InviteLinksTable:
     Type: AWS::DynamoDB::Table
