chore--caching node modules

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,8 +14,11 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3 # Checks out your code in the repository
 
-      - name: Set up Node.js (optional, if required for your deploy script)
+      - name: Set up Node.js
         uses: actions/setup-node@v3
+        with:
+          node-version: "20"
+          cache: "npm"
 
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v1
