--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,12 +13,12 @@ on:
       - ".github/workflows/deploy.yml"
 
 jobs:
-  deploy:
-    runs-on: ubuntu-latest # Use the latest version of Ubuntu
-
+  deploy-backend-and-infra:
+    runs-on: ubuntu-latest
+    if: ${{ github.event.head_commit.message != 'skip backend' }} # Optional skip
     steps:
       - name: Checkout code
-        uses: actions/checkout@v3 # Checks out your code in the repository
+        uses: actions/checkout@v3
 
       - name: Set up Node.js
         uses: actions/setup-node@v3
@@ -33,10 +33,38 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: ap-southeast-1
 
-      - name: Run deploy script
-        run: ./deploy.sh
+      - name: Deploy backend and infra
+        run: ./deploy_backend_and_infra.sh
         env:
           AWS_REGION: ap-southeast-1
           GOOGLE_CLIENT_ID: ${{ secrets.GOOGLE_CLIENT_ID }}
           GOOGLE_CLIENT_SECRET: ${{ secrets.GOOGLE_CLIENT_SECRET }}
-          COGNITO_ADMIN_INIT_PASSWORD: ${{secrets.COGNITO_ADMIN_INIT_PASSWORD}}
+          COGNITO_ADMIN_INIT_PASSWORD: ${{ secrets.COGNITO_ADMIN_INIT_PASSWORD }}
+
+  # deploy:
+  #   runs-on: ubuntu-latest # Use the latest version of Ubuntu
+
+  #   steps:
+  #     - name: Checkout code
+  #       uses: actions/checkout@v3 # Checks out your code in the repository
+
+  #     - name: Set up Node.js
+  #       uses: actions/setup-node@v3
+  #       with:
+  #         node-version: "20"
+  #         cache: "npm"
+
+  #     - name: Configure AWS credentials
+  #       uses: aws-actions/configure-aws-credentials@v1
+  #       with:
+  #         aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+  #         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+  #         aws-region: ap-southeast-1
+
+  #     - name: Run deploy script
+  #       run: ./deploy.sh
+  #       env:
+  #         AWS_REGION: ap-southeast-1
+  #         GOOGLE_CLIENT_ID: ${{ secrets.GOOGLE_CLIENT_ID }}
+  #         GOOGLE_CLIENT_SECRET: ${{ secrets.GOOGLE_CLIENT_SECRET }}
+  #         COGNITO_ADMIN_INIT_PASSWORD: ${{secrets.COGNITO_ADMIN_INIT_PASSWORD}}
