--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -8,7 +8,7 @@ on:
     paths:
       - "backend/**"
       - "frontend/**"
-      - "deploy.sh"
+      - "deploy_backend_and_infra.sh"
       - "deploy_frontend.sh"
       - ".github/workflows/deploy.yml"
 
