--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -43,6 +43,7 @@ jobs:
 
   deploy-frontend:
     runs-on: ubuntu-latest
+    needs: deploy-backend-and-infra
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
