--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,7 +15,7 @@ on:
 jobs:
   deploy-backend-and-infra:
     runs-on: ubuntu-latest
-    if: ${{ github.event.head_commit.message != 'skip backend' }} # Optional skip
+    if: ${{ github.event.head_commit.message != 'skip backend' }}
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
@@ -43,6 +43,7 @@ jobs:
 
   deploy-frontend:
     runs-on: ubuntu-latest
+    if: ${{ github.event.head_commit.message != 'skip frontend' }}
     needs: deploy-backend-and-infra
     steps:
       - name: Checkout code
@@ -62,7 +63,7 @@ jobs:
           aws-region: ap-southeast-1
 
       - name: Run deploy script
-        run: ./deploy-frontend.sh
+        run: ./deploy_frontend.sh
         env:
           AWS_REGION: ap-southeast-1
           GOOGLE_CLIENT_ID: ${{ secrets.GOOGLE_CLIENT_ID }}
