--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,10 +12,17 @@ on:
       - "deploy_frontend.sh"
       - ".github/workflows/deploy.yml"
 
+env:
+  AWS_REGION: ap-southeast-1
+  STACK_NAME: visitor-management
+  DOMAIN_NAME: alphinecodetech.click
+  SUB_DOMAIN: vms.alphinecodetech.click
+  APP_FRONTEND_BASE_URL: https://vms.alphinecodetech.click
+  COGNITO_CUSTOM_DOMAIN_NAME: login.vms.alphinecodetech.click
+
 jobs:
   deploy-backend-and-infra:
     runs-on: ubuntu-latest
-    # if: ${{ github.event.head_commit.message != 'skip backend' }}
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
@@ -31,12 +38,11 @@ jobs:
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: ap-southeast-1
+          aws-region: ${{ env.AWS_REGION }}
 
       - name: Deploy Backend and Infra
         run: ./deploy_backend_and_infra.sh
         env:
-          AWS_REGION: ap-southeast-1
           GOOGLE_CLIENT_ID: ${{ secrets.GOOGLE_CLIENT_ID }}
           GOOGLE_CLIENT_SECRET: ${{ secrets.GOOGLE_CLIENT_SECRET }}
           COGNITO_ADMIN_INIT_PASSWORD: ${{ secrets.COGNITO_ADMIN_INIT_PASSWORD }}
@@ -60,7 +66,7 @@ jobs:
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: ap-southeast-1
+          aws-region: ${{ env.AWS_REGION }}
 
       - name: Run deploy script
         run: ./deploy_frontend.sh
