--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -8,6 +8,7 @@ on:
     paths:
       - "backend/**"
       - "frontend/**"
+      - "plan_deploy_backend_and_infra.sh"
       - "deploy_backend_and_infra.sh"
       - "deploy_frontend.sh"
       - ".github/workflows/deploy.yml"
