--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,6 +29,8 @@ env:
 jobs:
   plan-deploy-backend-and-infra:
     runs-on: ubuntu-latest
+    outputs:
+      has-changes: ${{ steps.plan.outputs.has-changes }}
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
@@ -43,12 +45,20 @@ jobs:
           aws-access-key-id: ${{ env.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ env.AWS_SECRET_ACCESS_KEY }}
           aws-region: ${{ env.AWS_REGION }}
-      - name: Deploy Backend and Infra
-        run: ./plan_deploy_backend_and_infra.sh
+      - name: Plan Deploy Backend and Infra
+        id: plan
+        run: |
+          output=$(./plan_deploy_backend_and_infra.sh)
+          if echo "$output" | grep -q "No infrastructure changes detected"; then
+            echo "has-changes=false" >> $GITHUB_OUTPUT
+          else
+            echo "has-changes=true" >> $GITHUB_OUTPUT
+          fi
 
   deploy-backend-and-infra:
     runs-on: ubuntu-latest
     needs: plan-deploy-backend-and-infra
+    if: needs.plan-deploy-backend-and-infra.outputs.has-changes == 'true'
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
@@ -68,7 +78,7 @@ jobs:
 
   deploy-frontend:
     runs-on: ubuntu-latest
-    # if: ${{ github.event.head_commit.message != 'skip frontend' }}
+    if: ${{ github.event.head_commit.message != 'skip frontend' }}
     needs: deploy-backend-and-infra
     steps:
       - name: Checkout code
