--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,8 +3,8 @@ name: Deploy to Production
 # Trigger the workflow only on push to the main branch
 on:
   push:
-    # branches:
-    #   - main
+    branches:
+      - main
     paths:
       - "backend/**"
       - "frontend/**"
@@ -55,7 +55,7 @@ jobs:
   deploy-backend-and-infra:
     runs-on: ubuntu-latest
     # needs: plan-deploy-backend-and-infra
-    # if: needs.plan-deploy-backend-and-infra.outputs.has-changes == 'true'
+    if: ${{ !contains(github.event.head_commit.message, 'skip backend') }}
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
@@ -75,7 +75,7 @@ jobs:
 
   deploy-frontend:
     runs-on: ubuntu-latest
-    if: ${{ github.event.head_commit.message != 'skip frontend' }}
+    if: ${{ !contains(github.event.head_commit.message, 'skip frontend') }}
     needs: deploy-backend-and-infra
     steps:
       - name: Checkout code
