--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -35,7 +35,7 @@ jobs:
       - name: Check for backend changes
         id: backend_check
         run: |
-          if git diff --name-only HEAD^ HEAD | grep '^backend/'; then
+          if git diff --name-only HEAD^ HEAD | grep -E '^(backend/|scripts/)'; then
             echo "changed=true" >> $GITHUB_OUTPUT
           else
             echo "changed=false" >> $GITHUB_OUTPUT
@@ -59,7 +59,6 @@ jobs:
 
   deploy-frontend:
     runs-on: ubuntu-latest
-    if: ${{ !contains(github.event.head_commit.message, 'skip frontend') }}
     needs: deploy-backend-and-infra
     steps:
       - name: Checkout code
