--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -35,7 +35,7 @@ jobs:
       - name: Check for backend changes
         id: backend_check
         run: |
-          if git diff --name-only HEAD^ HEAD | grep -E '^(backend/|scripts/)'; then
+          if git diff --name-only HEAD^ HEAD | grep -E '^(backend/|scripts/deploy_backend_and_infra.sh)'; then
             echo "changed=true" >> $GITHUB_OUTPUT
           else
             echo "changed=false" >> $GITHUB_OUTPUT
@@ -68,7 +68,7 @@ jobs:
       - name: Check for frontend changes
         id: frontend_check
         run: |
-          if git diff --name-only HEAD^ HEAD | grep '^frontend/'; then
+          if git diff --name-only HEAD^ HEAD | grep -E '^(frontend/|scripts/deploy_frontend.sh)'; then
             echo "changed=true" >> $GITHUB_OUTPUT
           else
             echo "changed=false" >> $GITHUB_OUTPUT
