--- a/infrastructure/resources/cognito-user-pool.yaml
+++ b/infrastructure/resources/cognito-user-pool.yaml
@@ -69,3 +69,7 @@ Outputs:
     Value: !Ref CognitoUserPool
     Export:
       Name: CognitoUserPool
+  CognitoUserPoolArn:
+    Value: !GetAtt CognitoUserPool.Arn
+    Export:
+      Name: CognitoUserPoolArn
