--- a/infrastructure/resources/api-gateway-lambda.yaml
+++ b/infrastructure/resources/api-gateway-lambda.yaml
@@ -17,6 +17,12 @@ Resources:
         AllowHeaders: "'Content-Type,Authorization'"
         AllowOrigin: !Sub "'https://${SubDomain}'"
         AllowCredentials: true
+      Auth:
+        DefaultAuthorizer: CognitoAuthorizer
+        AddDefaultAuthorizerToCorsPreflight: false
+        Authorizers:
+          CognitoAuthorizer:
+            UserPoolArn: !ImportValue CognitoUserPoolArn
 
   # This is a Lambda function config associated with the source code: get-by-id.js
   getVisitorsFunction:
