--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -6,6 +6,8 @@ on:
     branches:
       - main
     paths:
+      - "template.yaml"
+      - "infrastructure/**"
       - "backend/**"
       - "frontend/**"
       - "scripts/**"
