putVisitRequestFunction Authorizer: NONE

--- a/infrastructure/resources/api-gateway-lambda.yaml
+++ b/infrastructure/resources/api-gateway-lambda.yaml
@@ -331,6 +331,8 @@ Resources:
             Path: /visit-request
             Method: POST
             RestApiId: !Ref ApiGatewayApi
+            Auth:
+              Authorizer: NONE
 
 Outputs:
   ApiGatewayApi:
