--- a/infrastructure/resources/api-gateway-lambda.yaml
+++ b/infrastructure/resources/api-gateway-lambda.yaml
@@ -232,6 +232,8 @@ Resources:
             Path: /visit-request/{inviteToken}
             Method: GET
             RestApiId: !Ref ApiGatewayApi
+            Auth:
+              Authorizer: NONE
 
   # Each Lambda function is defined by properties:
   # https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#awsserverlessfunction
