--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -44,20 +44,29 @@ jobs:
             echo "changed=false" >> $GITHUB_OUTPUT
           fi
       - name: Set up Node.js
-        if: steps.backend_check.outputs.changed == 'true' || contains(github.event.head_commit.message, 'deploy backend')
+        if: >
+          (steps.backend_check.outputs.changed == 'true' || 
+          contains(github.event.head_commit.message, 'deploy backend') ||
+          github.ref == 'refs/heads/main')
         uses: actions/setup-node@v3
         with:
           node-version: "20"
           cache: "npm"
       - name: Configure AWS credentials
-        if: steps.backend_check.outputs.changed == 'true' || contains(github.event.head_commit.message, 'deploy backend')
+        if: >
+          (steps.backend_check.outputs.changed == 'true' || 
+          contains(github.event.head_commit.message, 'deploy backend') ||
+          github.ref == 'refs/heads/main')
         uses: aws-actions/configure-aws-credentials@v1
         with:
           aws-access-key-id: ${{ env.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ env.AWS_SECRET_ACCESS_KEY }}
           aws-region: ${{ env.AWS_REGION }}
       - name: Deploy Backend and Infra
-        if: steps.backend_check.outputs.changed == 'true' || contains(github.event.head_commit.message, 'deploy backend')
+        if: >
+          (steps.backend_check.outputs.changed == 'true' || 
+          contains(github.event.head_commit.message, 'deploy backend') ||
+          github.ref == 'refs/heads/main')
         run: ./scripts/deploy_backend_and_infra.sh
 
   deploy-frontend:
@@ -77,18 +86,27 @@ jobs:
             echo "changed=false" >> $GITHUB_OUTPUT
           fi
       - name: Set up Node.js
-        if: steps.frontend_check.outputs.changed == 'true' || contains(github.event.head_commit.message, 'deploy frontend')
+        if: >
+          (steps.frontend_check.outputs.changed == 'true' || 
+          contains(github.event.head_commit.message, 'deploy frontend') ||
+          github.ref == 'refs/heads/main')
         uses: actions/setup-node@v3
         with:
           node-version: "20"
           cache: "npm"
       - name: Configure AWS credentials
-        if: steps.frontend_check.outputs.changed == 'true' || contains(github.event.head_commit.message, 'deploy frontend')
+        if: >
+          (steps.frontend_check.outputs.changed == 'true' || 
+          contains(github.event.head_commit.message, 'deploy frontend') ||
+          github.ref == 'refs/heads/main')
         uses: aws-actions/configure-aws-credentials@v1
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: ${{ env.AWS_REGION }}
       - name: Run deploy script
-        if: steps.frontend_check.outputs.changed == 'true' || contains(github.event.head_commit.message, 'deploy frontend')
+        if: >
+          (steps.frontend_check.outputs.changed == 'true' || 
+          contains(github.event.head_commit.message, 'deploy frontend') ||
+          github.ref == 'refs/heads/main')
         run: ./scripts/deploy_frontend.sh
