--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -5,7 +5,6 @@ on:
   push:
     branches:
       - main
-      - "*[deploy]*"
     paths:
       - "template.yaml"
       - "infrastructure/**"
@@ -46,8 +45,7 @@ jobs:
       - name: Set up Node.js
         if: >
           (steps.backend_check.outputs.changed == 'true' || 
-          contains(github.event.head_commit.message, 'deploy backend') ||
-          github.ref == 'refs/heads/main')
+          contains(github.event.head_commit.message, 'deploy backend'))
         uses: actions/setup-node@v3
         with:
           node-version: "20"
@@ -55,8 +53,7 @@ jobs:
       - name: Configure AWS credentials
         if: >
           (steps.backend_check.outputs.changed == 'true' || 
-          contains(github.event.head_commit.message, 'deploy backend') ||
-          github.ref == 'refs/heads/main')
+          contains(github.event.head_commit.message, 'deploy backend'))
         uses: aws-actions/configure-aws-credentials@v1
         with:
           aws-access-key-id: ${{ env.AWS_ACCESS_KEY_ID }}
@@ -65,8 +62,7 @@ jobs:
       - name: Deploy Backend and Infra
         if: >
           (steps.backend_check.outputs.changed == 'true' || 
-          contains(github.event.head_commit.message, 'deploy backend') ||
-          github.ref == 'refs/heads/main')
+          contains(github.event.head_commit.message, 'deploy backend'))
         run: ./scripts/deploy_backend_and_infra.sh
 
   deploy-frontend:
@@ -88,8 +84,7 @@ jobs:
       - name: Set up Node.js
         if: >
           (steps.frontend_check.outputs.changed == 'true' || 
-          contains(github.event.head_commit.message, 'deploy frontend') ||
-          github.ref == 'refs/heads/main')
+          contains(github.event.head_commit.message, 'deploy frontend'))
         uses: actions/setup-node@v3
         with:
           node-version: "20"
@@ -97,8 +92,7 @@ jobs:
       - name: Configure AWS credentials
         if: >
           (steps.frontend_check.outputs.changed == 'true' || 
-          contains(github.event.head_commit.message, 'deploy frontend') ||
-          github.ref == 'refs/heads/main')
+          contains(github.event.head_commit.message, 'deploy frontend'))
         uses: aws-actions/configure-aws-credentials@v1
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
@@ -107,6 +101,5 @@ jobs:
       - name: Run deploy script
         if: >
           (steps.frontend_check.outputs.changed == 'true' || 
-          contains(github.event.head_commit.message, 'deploy frontend') ||
-          github.ref == 'refs/heads/main')
+          contains(github.event.head_commit.message, 'deploy frontend'))
         run: ./scripts/deploy_frontend.sh
