chore--removed auth in get visitor by id

--- a/infrastructure/resources/api-gateway-lambda.yaml
+++ b/infrastructure/resources/api-gateway-lambda.yaml
@@ -163,6 +163,8 @@ Resources:
             Path: /visitor/{id}
             Method: GET
             RestApiId: !Ref ApiGatewayApi
+            Auth:
+              Authorizer: NONE
 
   # This is a Lambda function config associated with the source code: get-invite-by-token.mjs
   getInviteByTokenFunction:
