--- a/backend/package.json
+++ b/backend/package.json
@@ -7,6 +7,7 @@
         "@aws-sdk/client-dynamodb": "^3.398.0",
         "@aws-sdk/client-verifiedpermissions": "^3.808.0",
         "@aws-sdk/lib-dynamodb": "^3.398.0",
+        "aws-jwt-verify": "^5.1.0",
         "luxon": "^3.6.1",
         "qrcode": "^1.5.4",
         "uuid": "^11.1.0"
