--- a/infrastructure/resources/api-gateway-lambda.yaml
+++ b/infrastructure/resources/api-gateway-lambda.yaml
@@ -17,17 +17,17 @@ Resources:
         AllowHeaders: "'Content-Type,Authorization,X-Required-Permission'"
         AllowOrigin: !Sub "'https://${SubDomain}'"
         AllowCredentials: true
-      Auth:
-        DefaultAuthorizer: LambdaAuthorizer
-        AddDefaultAuthorizerToCorsPreflight: false
-        Authorizers:
-          LambdaAuthorizer:
-            FunctionArn: !GetAtt VerifiedPermissionsAuthorizerFunction.Arn
-            FunctionPayloadType: REQUEST
-            Identity:
-              Headers:
-                - Authorization
-              ReauthorizeEvery: 3600
+      # Auth:
+      #   DefaultAuthorizer: LambdaAuthorizer
+      #   AddDefaultAuthorizerToCorsPreflight: false
+      #   Authorizers:
+      #     LambdaAuthorizer:
+      #       FunctionArn: !GetAtt VerifiedPermissionsAuthorizerFunction.Arn
+      #       FunctionPayloadType: REQUEST
+      #       Identity:
+      #         Headers:
+      #           - Authorization
+      #         ReauthorizeEvery: 3600
 
     # Lambda Authorizer Function
   VerifiedPermissionsAuthorizerFunction:
