--- a/infrastructure/resources/api-gateway-lambda.yaml
+++ b/infrastructure/resources/api-gateway-lambda.yaml
@@ -17,23 +17,24 @@ Resources:
         AllowHeaders: "'Content-Type,Authorization,X-Required-Permission'"
         AllowOrigin: !Sub "'https://${SubDomain}'"
         AllowCredentials: true
-      Auth:
-        DefaultAuthorizer: CognitoAuthorizer
-        AddDefaultAuthorizerToCorsPreflight: false
-        Authorizers:
-          CognitoAuthorizer:
-            UserPoolArn: !ImportValue CognitoUserPoolArn
       # Auth:
-      #   DefaultAuthorizer: LambdaAuthorizer
+      #   DefaultAuthorizer: CognitoAuthorizer
       #   AddDefaultAuthorizerToCorsPreflight: false
       #   Authorizers:
-      #     LambdaAuthorizer:
-      #       FunctionArn: !GetAtt VerifiedPermissionsAuthorizerFunction.Arn
-      #       FunctionPayloadType: REQUEST
-      #       Identity:
-      #         Headers:
-      #           - Authorization
-      #         ReauthorizeEvery: 3600
+      #     CognitoAuthorizer:
+      #       UserPoolArn: !ImportValue CognitoUserPoolArn
+      Auth:
+        DefaultAuthorizer: LambdaAuthorizer
+        AddDefaultAuthorizerToCorsPreflight: false
+        Authorizers:
+          LambdaAuthorizer:
+            FunctionArn: !GetAtt VerifiedPermissionsAuthorizerFunction.Arn
+            FunctionPayloadType: REQUEST
+            Identity:
+              Headers:
+                - Authorization
+                - X-Required-Permission
+              ReauthorizeEvery: 3600
 
     # Lambda Authorizer Function
   VerifiedPermissionsAuthorizerFunction:
