Auth:               Authorizer: NONE

--- a/infrastructure/resources/api-gateway-lambda.yaml
+++ b/infrastructure/resources/api-gateway-lambda.yaml
@@ -128,11 +128,7 @@ Resources:
               - method.request.querystring.residentId:
                   Required: false
             Auth:
-              DefaultAuthorizer: CognitoAuthorizer
-              AddDefaultAuthorizerToCorsPreflight: false
-              Authorizers:
-                CognitoAuthorizer:
-                  UserPoolArn: !ImportValue CognitoUserPoolArn
+              Authorizer: NONE
 
   # This is a Lambda function config associated with the source code: get-visit-requests
   getVisitRequestsFunction:
